@@ -1,13 +1,18 @@
 package Zeze.Util;
 
 import java.io.FileInputStream;
+import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.OutputStream;
+import java.math.BigInteger;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.security.GeneralSecurityException;
+import java.security.KeyPair;
+import java.security.KeyPairGenerator;
 import java.security.KeyStore;
 import java.security.KeyStoreException;
 import java.security.NoSuchAlgorithmException;
@@ -15,18 +20,36 @@ import java.security.PrivateKey;
 import java.security.PublicKey;
 import java.security.SecureRandom;
 import java.security.Signature;
+import java.security.cert.Certificate;
+import java.security.cert.CertificateException;
 import java.security.interfaces.RSAKey;
 import java.util.Arrays;
+import java.util.Date;
 import javax.crypto.Cipher;
 import javax.crypto.KeyGenerator;
 import javax.crypto.SecretKey;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
+import sun.security.x509.AlgorithmId;
+import sun.security.x509.CertificateAlgorithmId;
+import sun.security.x509.CertificateIssuerName;
+import sun.security.x509.CertificateSerialNumber;
+import sun.security.x509.CertificateSubjectName;
+import sun.security.x509.CertificateValidity;
+import sun.security.x509.CertificateVersion;
+import sun.security.x509.CertificateX509Key;
+import sun.security.x509.X500Name;
+import sun.security.x509.X509CertImpl;
+import sun.security.x509.X509CertInfo;
 
-// 生成KeyStore: keytool -genkeypair -keyalg RSA -keysize 2048 -alias test -keystore test.ks -storetype pkcs12 -storepass 123456 -validity 365 -dname "cn=CommonName, ou=OrgName, o=Org, c=Country"
+// 生成KeyStore: keytool -genkeypair -keyalg RSA -keysize 2048 -keystore test.ks -storetype pkcs12 -storepass 123456 -alias test -validity 365 -dname "cn=CommonName, ou=OrgName, o=Org, c=Country"
 // 查看KeyStore: keytool -list -keystore test.ks -storepass 123456 -v
+// 导出PEM格式公钥证书: keytool -exportcert -keystore test.ks -storepass 123456 -alias test -rfc -file test.pem
+// 导出DER格式公钥证书: keytool -exportcert -keystore test.ks -storepass 123456 -alias test -file test.der
+// 以上两种格式都可以用.cer或.crt后缀名, PEM和DER两种编码格式可以用OpenSSL工具转换
 // 参考: https://docs.oracle.com/en/java/javase/11/tools/keytool.html
 // 参考: https://docs.oracle.com/en/java/javase/11/docs/specs/security/standard-names.html
+// 编译时需要: --add-exports java.base/sun.security.x509=ALL-UNNAMED
 public final class Cert {
 	// 从输入流加载KeyStore(PKCS12格式的二进制密钥存储格式,有密码加密,包含私钥和公钥证书)
 	public static KeyStore loadKeyStore(InputStream inputStream, String passwd)
@@ -45,6 +68,50 @@ public final class Cert {
 	public static PrivateKey getPrivateKey(KeyStore keyStore, String passwd, String alias)
 			throws GeneralSecurityException {
 		return (PrivateKey)keyStore.getKey(alias, passwd.toCharArray());
+	}
+
+	// 生成RSA密钥对(公钥+私钥)
+	public static KeyPair generateRsaKeyPair() throws NoSuchAlgorithmException {
+		var keyPairGen = KeyPairGenerator.getInstance("RSA");
+		keyPairGen.initialize(2048);
+		return keyPairGen.generateKeyPair();
+	}
+
+	// 为RSA密钥对(公钥+私钥)生成自签名的公钥证书并连同私钥保存到用密码加密的KeyStore输出流
+	// 注意: 调用该方法需要给JVM参数加: --add-opens java.base/sun.security.x509=ALL-UNNAMED
+	public static void saveKeyStore(OutputStream outputStream, String passwd, String alias, KeyPair keyPair,
+									String commonName, int validDays) throws GeneralSecurityException, IOException {
+		var certInfo = new X509CertInfo();
+		var owner = new X500Name("CN=" + commonName);
+		certInfo.set(X509CertInfo.VERSION, new CertificateVersion(CertificateVersion.V3));
+		certInfo.set(X509CertInfo.SERIAL_NUMBER, new CertificateSerialNumber(new BigInteger(64, new SecureRandom())));
+		try {
+			certInfo.set(X509CertInfo.SUBJECT, new CertificateSubjectName(owner));
+		} catch (CertificateException ignore) {
+			certInfo.set(X509CertInfo.SUBJECT, owner);
+		}
+		try {
+			certInfo.set(X509CertInfo.ISSUER, new CertificateIssuerName(owner));
+		} catch (CertificateException ignore) {
+			certInfo.set(X509CertInfo.ISSUER, owner);
+		}
+		var now = System.currentTimeMillis();
+		var endTime = now + validDays * 86400_000L;
+		certInfo.set(X509CertInfo.VALIDITY, new CertificateValidity(new Date(now), new Date(endTime)));
+		certInfo.set(X509CertInfo.KEY, new CertificateX509Key(keyPair.getPublic()));
+		var algoId = AlgorithmId.get("1.2.840.113549.1.1.11"); // SHA256withRSA
+		certInfo.set(X509CertInfo.ALGORITHM_ID, new CertificateAlgorithmId(algoId));
+		certInfo.set(CertificateAlgorithmId.NAME + '.' + CertificateAlgorithmId.ALGORITHM, algoId);
+
+		var cert = new X509CertImpl(certInfo);
+		cert.sign(keyPair.getPrivate(), "SHA256withRSA");
+		cert.verify(keyPair.getPublic());
+
+		var keyStore = KeyStore.getInstance("pkcs12");
+		keyStore.load(null, null);
+		keyStore.setCertificateEntry(alias, cert);
+		keyStore.setKeyEntry(alias, keyPair.getPrivate(), null, new Certificate[]{cert});
+		keyStore.store(outputStream, passwd.toCharArray());
 	}
 
 	// 使用RSA私钥对数据签名
@@ -244,13 +311,10 @@ public final class Cert {
 		var publicKeyData = ((RSAKey)publicKey).getModulus().toByteArray();
 		System.out.println("rsa modulus = [" + publicKeyData.length + "] " + BitConverter.toString(publicKeyData));
 
-//		var priKey = cert.keyStore.getKey("test", "123".toCharArray());
-//		var cert1 = cert.keyStore.getCertificate("test");
-//		var pubKey = cert1.getPublicKey();
-//		System.out.println(priKey);
-//		System.out.println("---");
-//		System.out.println(cert1);
-//		System.out.println("---");
-//		System.out.println(pubKey);
+		// --add-opens java.base/sun.security.x509=ALL-UNNAMED
+		var t = System.currentTimeMillis();
+		var keyPair = generateRsaKeyPair();
+		saveKeyStore(new FileOutputStream("save.ks"), "123456", "test", keyPair, "test", 365);
+		System.out.println("OK " + (System.currentTimeMillis() - t));
 	}
 }
